app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
  margin: 0;
  padding: 0;
  overflow: hidden;
}


.loading_bar{
  animation: loadingAnimation;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}

@keyframes loadingAnimation {
  0%{
    left: 10%;
    width: 20px;
    filter: brightness(50%);
  }
  20%{
    width: 40px;
  }
  50%{
    filter: brightness(200%);
    width: 40px;
  }
  80%{
    width: 40px;
  }
  100%{
    left: 70%;
    width: 20px;
    filter: brightness(50%);
  }
}

.animationAppear{
  animation: appearance 2s;
  animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
}

@keyframes appearance {
  0%{
    opacity: 0%;
  }
  100%{
    opacity: 100%;
  }
}

.darkModeSwitchSlideRight{
  animation: slideRight 0.2s;
  left: 50%

}
.darkModeSwitchSlideLeft{
  animation: slideLeft 0.2s;
  left: 0%
}

@keyframes slideRight {
  0%{
    left: 25%
  }
  100%{
    left: 50%
  }
}
@keyframes slideLeft {
  0%{
    left: 25%
  }
  100%{
    left: 0%
  }
}

